fix: adjust layout width to fix overflow

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: #2c5075;
 }
 
