--- a/components/Map/Map.module.css
+++ b/components/Map/Map.module.css
@@ -1,13 +1,13 @@
 .mapContainer {
   height: 95vh;
-  max-width: 95vw;
+  max-width: 95%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   margin: 3.5rem 2rem 0rem 2rem;
 }
 
 @media (max-width: 600px) {
   .mapContainer {
-    max-width: 100vw;
+    max-width: 100%;
     margin: 3.5rem 0rem 0rem 0rem;
   }
 }
