--- a/containers/Layout.module.css
+++ b/containers/Layout.module.css
@@ -1,15 +1,14 @@
 .layout {
   min-height: 100vh;
-  max-width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  overflow: hidden;
 }
 
 .home {
-  max-width: 100%;
+  width: 100%;
 }
 
 .margin {
